# ld28-dinner-with-a-snowman

./: README.md  main.py  pyproject.toml  step.py  world.py
assets/: bg.xcf  penguin.xcf  puddle.xcf  start.xcf  toodirty.xcf  tryharder.xcf  welldone.xcf
