[project]
name = "ld28-dinner-with-a-snowman"
version = "0.2.0"
description = "A simple game about a penguin getting to a dinner with a snowman"
requires-python = ">= 3.0"
dependencies = [
    "pygame"
]
authors = [
  {name = "Iain R. Learmonth", email = "iain@learmonth.me"}
]
maintainers = [
  {name = "Iain R. Learmonth", email = "iain@learmonth.me"}
]
readme = "README.md"
license-files = ["LICENSE"]
keywords = ["game", "ludum", "penguin", "dinner", "snowman", "ld28"]
classifiers = [
  "Programming Language :: Python"
]
